preprocessing data (remove Saturation)

--- a/RemoveSaturation.ipynb
+++ b/RemoveSaturation.ipynb
@@ -165,22 +165,22 @@
     "\n",
     "for j in range(3, 16):\n",
     "    if len(TrainRatios[str(j)]) > 0:\n",
-    "        folder = \"SkySat_ME_noSaturation/Train/{}\".format(j)\n",
+    "        folder = \"SkySat_ME_noSaturation/train/{}\".format(j)\n",
     "        safe_mkdir(folder)\n",
-    "        np.save(join(folder, \"TrainLR.npy\"), np.array(TrainData[str(j)]))\n",
-    "        np.save(join(folder, \"TrainRatio.npy\"), np.array(TrainRatios[str(j)]))\n",
+    "        np.save(join(folder, \"trainLR.npy\"), np.array(TrainData[str(j)]))\n",
+    "        np.save(join(folder, \"trainRatio.npy\"), np.array(TrainRatios[str(j)]))\n",
     "\n",
     "    if len(ValRatios[str(j)]) > 0:\n",
-    "        folder = \"SkySat_ME_noSaturation/Val/{}\".format(j)\n",
+    "        folder = \"SkySat_ME_noSaturation/val/{}\".format(j)\n",
     "        safe_mkdir(folder)\n",
-    "        np.save(join(folder, \"ValLR.npy\"), np.array(ValData[str(j)]))\n",
-    "        np.save(join(folder, \"ValRatio.npy\"), np.array(ValRatios[str(j)]))\n",
+    "        np.save(join(folder, \"valLR.npy\"), np.array(ValData[str(j)]))\n",
+    "        np.save(join(folder, \"valRatio.npy\"), np.array(ValRatios[str(j)]))\n",
     "        \n",
     "    if len(TestRatios[str(j)]) > 0:\n",
-    "        folder = \"SkySat_ME_noSaturation/Test/{}\".format(j)\n",
+    "        folder = \"SkySat_ME_noSaturation/test/{}\".format(j)\n",
     "        safe_mkdir(folder)\n",
-    "        np.save(join(folder, \"TestLR.npy\"), np.array(TestData[str(j)]))\n",
-    "        np.save(join(folder, \"TestRatio.npy\"), np.array(TestRatios[str(j)]))\n",
+    "        np.save(join(folder, \"testLR.npy\"), np.array(TestData[str(j)]))\n",
+    "        np.save(join(folder, \"testRatio.npy\"), np.array(TestRatios[str(j)]))\n",
     "    \n",
     "    "
    ]
@@ -188,7 +188,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -202,7 +202,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
