--- a/RemoveSaturation.ipynb
+++ b/RemoveSaturation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "id": "f7361580-ae83-448e-b092-8bb032023539",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,10 @@
     "import io\n",
     "from glob import glob\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "from os.path import join\n",
     "\n",
     "import os\n",
-    "from tqdm import tqdm\n",
     "\n",
     "def safe_mkdir(path):\n",
     "    \"\"\" Create a directory if there isn't one already. \"\"\"\n",
@@ -27,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "id": "a661486c-f40b-47fb-8018-9aef516cb5e5",
    "metadata": {},
    "outputs": [],
@@ -44,28 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "id": "9dcd7031-aed3-4dc2-9457-a3c1d2f30875",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2660"
-      ]
-     },
-     "execution_count": 161,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(dir_crop)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "id": "659e59e7-793d-43ff-b599-001d7642c059",
    "metadata": {},
    "outputs": [],
@@ -78,39 +65,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "id": "3bedf34e-32aa-458d-aa24-045eae394414",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "105"
-      ]
-     },
-     "execution_count": 163,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(ssc13index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": null,
    "id": "7e30cf77-eae6-4368-9e2e-8943052eb135",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████| 2500/2500 [00:03<00:00, 657.64it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "TrainData = {}\n",
     "TrainRatios = {}\n",
@@ -133,7 +101,7 @@
     "\n",
     "    \n",
     "    \n",
-    "for i in tqdm(range(2500)):\n",
+    "for i in range(2500):\n",
     "    data = np.load(dir_crop[i])\n",
     "    ratio = np.load(dir_ratio[i])\n",
     "    sat = np.load(dir_sat[i])\n",
@@ -184,13 +152,21 @@
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2210f4f8-bda4-46b3-8d46-0b0d891796a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 64-bit",
+   "display_name": "HDR-DSP",
    "language": "python",
-   "name": "python3"
+   "name": "hdr-dsp"
   },
   "language_info": {
    "codemirror_mode": {
@@ -202,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
